tests/valid/boolean_operators/precedence_4.rs
/*
return: 1
*/

main(): int {
    return 2 == 2 || 0;
}