tests/invalid/scoping/extra_brace.rs
/*
fail: 1
*/

main(): int {
    if(0){
        return 1;
    }}
    return 2;
}